@@ -3,6 +3,8 @@ Code generation and optimization:
 
 Usability:
 - Resurrected support for the Cygwin x86-32 port, which got lost at release 3.0.
+- Pull request #192: improve the printing of Clight intermediate code
+  so that it looks more like valid C source.  (Frédéric Besson)
 
 Bug fixing:
 - Issue #P25: make sure sizeof(long double) = sizeof(double) in all contexts.
